engines/neo_component/app/assets/stylesheets/menu_component.tailwind.css
.menu-component-container {
  @apply relative inline-block h-6 w-6 md:h-7 md:w-7;
}
.menu-component-button {
  @apply flex justify-center cursor-pointer rounded-full bg-primary-light-50 text-primary border border-primary hover:bg-primary-light hover:text-white p-0.5 h-full w-full;
}

.menu-component-button-active {
  @apply !bg-primary text-white;
}

.menu-component-button-icon {
  @apply h-5 md:h-6;
}

.menu-component-list-box {
  @apply w-max min-w-full bg-white rounded-lg md:rounded-xl border border-line-colour mt-1 z-50 text-slate-grey-50 whitespace-nowrap;
}

.menu-component-left {
  @apply left-0;
}

.menu-component-right {
  @apply right-0;
}

.menu-component-center {
  @apply left-1/2 -translate-x-1/2;

}

.menu-component-list {
  @apply flex flex-col divide-y divide-line-colour text-letter-color;
}

.menu-component-list-items{
  @apply px-4 md:px-5 py-3 md:py-4 hover:bg-primary-light-50 flex w-full;
}

